# awesome-sphinx-revealjs

./: .buildinfo  .gitignore  README.md  objects.inv  pyproject.toml
.doctrees/: environment.pickle
.github/workflows/: deploy.yml  pr-preview.yml
pr-2/: index.html
pr-2/.doctrees/: environment.pickle  index.doctree
pr-2/_sources/: index.rst.txt
pr-3/.doctrees/: environment.pickle
pr-4/: index.html
pr-4/.doctrees/: environment.pickle  index.doctree
pr-4/_sources/: index.rst.txt
pr-5/.doctrees/: environment.pickle
pr-6/.doctrees/: environment.pickle
pr-6/_sources/: index.rst.txt
pr-7/.doctrees/: environment.pickle
source/: conf.py
