[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-sphinx-revealjs"
version = "0.1.0"
description = "Awesome sphinx-revealjs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sphinx>=5.0",
    "sphinx-revealjs>=2.0.0",
    "atsphinx-stlite",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = []
